bk_ida/gccida/g2/ix86_asm_file_end
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_asm_file_end/src/i386.c:4340:18: error: use of undeclared identifier 'off_6720DB'
output_asm_insn( off_6720DB, xops); 
                 ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_asm_file_end/src/obj/i386.o] Error 1
